--- a/css/code.css
+++ b/css/code.css
@@ -1,4 +1,7 @@
 /* CODE HIGHLIGHT */
+.reveal pre code {
+  overflow: hidden;
+}
 code, pre {
   font-family: 'Source Code Pro', monospace;
   line-height: 1.5 !important;
