--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -10,11 +10,10 @@
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/serif.css">
 
-		<!-- Theme used for syntax highlighting of code -->
+	<!-- Theme used for syntax highlighting of code -->
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
-    <link rel="stylesheet" href="{{ '/css/prism-base16-monokai.dark.css' | url }}">
+    <link rel="stylesheet" href="{{ '/css/prism.css' | url }}">
     <link rel="stylesheet" href="{{ '/css/code.css' | url }}">
-	<!-- <link rel="stylesheet" href="lib/css/zenburn.css"> -->
     <script src="{{ '/js/elm.min.js' | url }}"></script>
 
 		<!-- Printing and PDF exports -->
