--- a/css/theme/serif.css
+++ b/css/theme/serif.css
@@ -154,7 +154,9 @@ body {
   font-family: monospace;
   line-height: 1.2em;
   word-wrap: break-word;
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15); }
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15);
+  border: 4px solid #333;
+}
 
 .reveal code {
   font-family: monospace;
