--- a/css/prism.css
+++ b/css/prism.css
@@ -50,14 +50,14 @@ code[class*="language-"]::selection, code[class*="language-"] ::selection {
 /* Code blocks */
 pre[class*="language-"] {
 	padding: 2em 1em;
-	margin: .5em 0;
+	/* margin: .5em 0; */
 	overflow: auto;
 }
 
-:not(pre) > code[class*="language-"],
+/* :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
-	/* background: #f5f2f0; */
-}
+	background: #f5f2f0;
+} */
 
 /* Inline code */
 :not(pre) > code[class*="language-"] {
